# python-autogen

./: .gitignore  01-agents.ipynb  02-agent.ipynb  03-coding.ipynb  Makefile  OAI_CONFIG_LIST  env.sample  main.py  pyproject.toml
.ipynb_checkpoints/: 01-agents-checkpoint.ipynb  02-agent-checkpoint.ipynb  OAI_CONFIG_LIST-checkpoint
coding/: plot_stock_price.py  plot_stock_price_change.py  requirements.py
