[tool.poetry]
name = "python-autogen"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
google-generativeai = "^0.2.2"
load-dotenv = "^0.1.0"
pyautogen = {extras = ["teachable"], version = "^0.2.2"}
jupyterlab = "^4.0.9"
black = {extras = ["jupyter"], version = "^23.11.0"}
pymemgpt = "^0.2.4"
matplotlib = "^3.8.2"
yfinance = "^0.2.33"
docker = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
